crates/mde-voice-config/src/snapshots/mde_voice_config__tests__dispatcher.list.snap
---
source: crates/mde-voice-config/src/lib.rs
expression: set.dispatcher_list
---
# Generated by mde-voice-config
# File: dispatcher.list
# Node: alice-laptop
# Mesh bind: 192.168.42.7 on nebula1
# Edit the voice_mesh / voice_public policies instead of this file.

# format: setid destination [flags [priority [attrs [body]]]]
# VV-2 populates one row per remote peer's mde-local AOR
# from the voice_mesh policy. VV-1 ships the file empty
# so the dispatcher module loads cleanly.
