crates/mde-voice-config/src/snapshots/mde_voice_config__tests__uacreg.list.snap
---
source: crates/mde-voice-config/src/lib.rs
expression: set.uacreg_list
---
# Generated by mde-voice-config
# File: uacreg.list
# Node: alice-laptop
# Mesh bind: 192.168.42.7 on nebula1
# Edit the voice_mesh / voice_public policies instead of this file.

# format: l_uuid l_username l_domain r_username r_domain realm
#         auth_username auth_password auth_proxy expires flags reg_delay
# VV-13/14 populate this from the voice_public policy.
# VV-1 ships the file empty so the uac module loads
# cleanly with no outbound registrations.
